# mini-chat-llm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  inference.py  main.py
app/static/: index.html
checkpoints/sft_model/: config.json  generation_config.json  model.safetensors
src/: __init__.py  config.py  model.py  ppo_train.py  sft_train.py  utils.py
templates/: index.html
