[project]
name = "root"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bert-score>=0.3.13",
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "fastapi>=0.116.1",
    "numpy>=2.2.6",
    "openai>=1.96.1",
    "peft>=0.16.0",
    "pydantic>=2.11.7",
    "rouge-score>=0.1.2",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "trl>=0.19.1",
    "uvicorn>=0.35.0",
]
